--- a/app/develop/scss/main.scss
+++ b/app/develop/scss/main.scss
@@ -91,6 +91,8 @@
 .login-btn{
     float:right;
     height:100%;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .fa-login-btn{
@@ -99,7 +101,7 @@
 }
 
 .fa-logout-btn{
-    @include button(false,$warning-color,darken($warning-color,5),#fff, solid);
+    @include button(false,$primary-color,darken($primary-color,5),#fff, hollow);
     @extend .login-btn;
 }
 
@@ -122,6 +124,7 @@
     width: 100%;
     border: 15px solid #fff;
     background-color: #fff;
+    border-radius: $global-radius;
 }
 
 .fa-card-nav-area{
@@ -143,21 +146,68 @@
 
 //---------------------------------------------------Edit Panel
 
+
+label{
+        color: darken($success-color,12);
+        text-align: center;
+        font-weight: bold;
+}
+
 .fa-edit-panel{
     @include grid-row();
     min-height: 300px;
     background-color: lighten(#e3e3e3,3);
+    padding-bottom: 20px;
+    padding-top: 30px;
 }
 
 .fa-edit-options{
-    @include grid-column(6);
+    @include grid-column(8);
+    @include grid-column-position(center);
+}
+
+.fa-editable-msg{
+    background-color: lighten(#e3e3e3,7);
+    padding: 15px;
+    border: 1px solid darken(#e3e3e3,10);
+    margin-bottom: 30px;
+    border-radius: $global-radius;
+    p{
+        text-indent: 0;
+        text-align: center;
+    }
+}
+
+
+.fa-floater{
+
+    .angucomplete-dropdown{
+        background-color: lighten(#e3e3e3,5);
+        font-size: 0.8em;
+        font-color: $success-color;
+        padding:15px;
+        border: 1px solid darken(#e3e3e3, 10);
+        margin-bottom: 30px;
+    }
+    
+}
+
+.fa-draw-btn{
+    @include button(true, $success-color, darken($success-color, 5), #fff, solid);
 }
 
 .fa-canvass-draw{
-    @include grid-column(6);
+    @include grid-column(12);
+    padding: auto 30px;
 }
 
-//---------------------------------------------------Actions Area
+.fa-drawn-card{
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-top: 30px;
+}
+
+//---------------------------------------------------Actions bar
 
 .fa-action-bar{
     @include grid-row;
@@ -198,7 +248,7 @@
     @include menu-simple;
     color: #eee;
     background-color:#fff;
-    border-top:1px solid darken(#e3e3e3,20);
+    border-top:1px solid darken($primary-color,2);
     ul{
         list-style-type:none;
         margin: 0;
