--- a/app/views/main.html
+++ b/app/views/main.html
@@ -35,29 +35,34 @@
         
         <div class="fa-edit-panel" id="fa-edit-panel" ng-show="toggler">
            <div class="fa-edit-options">
+              <label class="">Click on the message below to edit it</label>
                <div class="fa-editable-msg" id="message"> 
-                   I want to edit this text easily.
+                   <p>The dark ones run when they see the sun.</p>
+                   <p>But you and I, we only run for fun.</p>
+                   <p>My BBF Forever:</p>
+                   <p>Olakuunmi.</p>
                </div>
                
               <div class="fa-fb-friend-list">
-                <angucomplete class='floater' localdata="allfriends"
+                  <label>Who would you like to share this card with?</label>
+                <angucomplete class='fa-floater' localdata="allfriends"
                       id="friendlist"
                       titlefield="name"
                       searchfields="name"
                       selectedobject="id"
                       imagefield="picture.data.url"
                       minlenght='3'
-                      placeholder="Search for friend" />
+                      placeholder="Type Friend's Facebook name" />
               </div>
                
-               <div class="fa-draw-btn">
-                   <button ng-click="draw()">Create Card</button>
+               <div>
+                   <button class="fa-draw-btn" ng-click="draw()">Create Card</button>
                </div>
            </div>
            
            <div class="fa-cavass-draw">
-               <div ng-show="showcanvass">
-                    <canvas id="card" width="600" height="400" style="border:1px solid #d3d3d3;">
+               <div  class="fa-drawn-card" ng-show="showcanvass">
+                    <canvas id="card" width="540" height="400" style="border:1px solid #d3d3d3;text-align:left;text-indent:0;">
                         Your browser does not support the HTML5 canvas tag.
                     </canvas>
                 </div>
@@ -67,12 +72,13 @@
         
         <div class="fa-action-bar">
             <div class="fa-edit-btn-area">
-                <a ng-model="toggler" ng-click="toggler=!toggler" class="fa-edit-btn">Edit Message</a>
+                <a ng-model="toggler" ng-click="toggler=!toggler" class="fa-edit-btn"><i class="-fa-icon fa-edit-icon"></i>Add a Message</a>
             </div>
             <div class="fa-like-btn-area"></div>
             <div class="fa-post-btn-area"></div>
             <div class="fa-share-btn-area">
                 <button class="fa-share-btn" ng-show="user.name!='login'" ng-click="saveandupload()">
+                   <i class="fa-icon fa-share-icon"></i>
                     Share with friend
                 </button>
                 <a class="fa-share-btn" ng-show="user.name=='login'" ng-click="FBlogin()">Login to share</a>
