--- a/app/develop/scss/main.scss
+++ b/app/develop/scss/main.scss
@@ -5,41 +5,56 @@
 @import 'settings';
 @import 'motion-ui';
 
-@include foundation-global-styles;
-@include foundation-grid;
-@include foundation-typography;
-@include foundation-button;
-@include foundation-forms;
-@include foundation-visibility-classes;
-@include foundation-float-classes;
-//@include foundation-accordion;
-//@include foundation-accordion-menu;
-//@include foundation-badge;
-//@include foundation-breadcrumbs;
-@include foundation-button-group;
-@include foundation-callout;
-@include foundation-close-button;
-//@include foundation-drilldown-menu;
-//@include foundation-dropdown;
-//@include foundation-dropdown-menu;
-//@include foundation-flex-video;
-@include foundation-label;
-@include foundation-media-object;
-@include foundation-menu;
-@include foundation-off-canvas;
-//@include foundation-orbit;
-@include foundation-pagination;
-//@include foundation-progress-bar;
-//@include foundation-slider;
-@include foundation-sticky;
-@include foundation-reveal;
-@include foundation-switch;
-//@include foundation-table;
-//@include foundation-tabs;
-@include foundation-thumbnail;
-@include foundation-title-bar;
-@include foundation-tooltip;
-@include foundation-top-bar;
+// Foundation for Apps
+// by ZURB
+// foundation.zurb.com
+// Licensed under MIT Open Source
+
+$foundation-version: '1.2.0';
+
+// Make sure the charset is set appropriately
+@charset "UTF-8";
+
+// Libraries (let's make Normalize an external dependency eventually)
+@import
+  "vendor/normalize";
+
+// Helpers
+@import
+  "helpers/functions",
+  "helpers/mixins",
+  "helpers/breakpoints",
+  "helpers/images";
+
+// Global styles
+@import
+  "global";
+
+// Components
+@import
+  "components/iconic",
+  "components/action-sheet",
+  "components/block-list",
+  "components/button",
+  "components/button-group",
+  "components/card",
+  "components/extras",
+  "components/forms",
+  "components/grid",
+  "components/title-bar",
+  "components/label",
+  "components/list",
+	"components/menu-bar",
+	"components/modal",
+  "components/motion",
+  "components/notification",
+  "components/off-canvas",
+  "components/popup",
+  "components/switch",
+  "components/tabs",
+  "components/accordion",
+  "components/typography",
+  "components/utilities";
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
@@ -51,245 +66,245 @@
 //__________________________________________________________
 
 
-.fa-app-wrapper{
-  width: 100%;
-    height: 100%;
-}
-
-.fa-app-view{
-    max-width:600px;
-    min-height: 450px;
-    margin: 0 auto;
-    background: $secondary-color;
-    background-image: url(../../images/fa-bg-pattern.png);
-}
-
-.fa-icon{
-    width: 50%;
-    height: 40px;
-    display: inline-block;
-    position: absolute;
-//    float: left;
-    top:-0.1em;
-    background-image: url(../../images/fa-like-icon.png);
-    background-repeat: no-repeat;
-    background-origin: border-box;
-}
-
-.fa-btn-icon{
-    position: relative;
-}
-
-//---------------------------------------------------Header Area
-
-.fa-header{
-    @include grid-row();
-    background-color: #fff;
-    min-height: 50px;
-    padding-top: 10px;
-    padding-bottom:10px;
-}
-
-.fa-logo-area{
-    @include grid-column(6);
-    padding-top: 5px;
-}
-
-.fa-logo{
-    height: 60px;
-}
-
-.fa-login-area{
-    @include grid-column(6);
-    padding-top: 15px;
-}
-
-.login-btn{
-    float:right;
-    height:100%;
-    padding-left: 40px;
-    padding-right: 40px;
-}
-
-.fa-login-btn{
-    @include button(false,$primary-color,darken($primary-color,5),#fff, solid);
-    @extend .login-btn;
-}
-
-.fa-logout-btn{
-    @include button(false,$primary-color,darken($primary-color,5),#fff, hollow);
-    @extend .login-btn;
-}
-
-.fa-profile-pic{
-    height: 40px;
-    float: right;
-    border-radius:50%;
-    margin-right:20px;
-}
-
-
-//---------------------------------------------------Card Area
-
-.fa-card-opt-area{
-    min-height: 450px;
-    padding: 100px 100px 20px;
-}
-
-.fa-card{
-    width: 100%;
-    border: 15px solid #fff;
-    background-color: #fff;
-    border-radius: $global-radius;
-}
-
-.fa-card-nav-area{
-    @include grid-row();
-    margin-top:20px;
-}
-
-.fa-card-nav-prev{
-    @include grid-column(3);
-}
-
-.fa-card-nav-count{
-    @include grid-column(6);
-}
-
-.fa-card-nav-next{
-    @include grid-column(3);
-}
-
-//---------------------------------------------------Edit Panel
-
-
-label{
-        color: darken($success-color,12);
-        text-align: center;
-        font-weight: bold;
-}
-
-.fa-edit-panel{
-    @include grid-row();
-    min-height: 300px;
-    background-color: lighten(#e3e3e3,3);
-    padding-bottom: 20px;
-    padding-top: 30px;
-}
-
-.fa-edit-options{
-    @include grid-column(8);
-    @include grid-column-position(center);
-}
-
-.fa-editable-msg{
-    background-color: lighten(#e3e3e3,7);
-    padding: 15px;
-    border: 1px solid darken(#e3e3e3,10);
-    margin-bottom: 30px;
-    border-radius: $global-radius;
-    p{
-        text-indent: 0;
-        text-align: center;
-    }
-}
-
-
-.fa-floater{
-
-    .angucomplete-dropdown{
-        background-color: lighten(#e3e3e3,5);
-        font-size: 0.8em;
-        font-color: $success-color;
-        padding:15px;
-        border: 1px solid darken(#e3e3e3, 10);
-        margin-bottom: 30px;
-    }
-    
-}
-
-.fa-draw-btn{
-    @include button(true, $success-color, darken($success-color, 5), #fff, solid);
-}
-
-.fa-canvass-draw{
-    @include grid-column(12);
-    padding: auto 30px;
-}
-
-.fa-drawn-card{
-    margin-right: 30px;
-    margin-left: 30px;
-    margin-top: 30px;
-}
-
-//---------------------------------------------------Actions bar
-
-.fa-action-bar{
-    @include grid-row;
-    background-color: #fff;
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
-
-.fa-edit-btn-area{
-    @include grid-column(5);
-}
-
-.fa-edit-btn{
-    @include button(true,$primary-color,darken($primary-color,5),#fff, hollow);
-    @extend .fa-btn-icon;
-    background-image: url(../../images/fa-edit-icon.png);
-    background-repeat: no-repeat;
+//.fa-app-wrapper{
+//  width: 100%;
+//    height: 100%;
+//}
+//
+//.fa-app-view{
+//    max-width:600px;
+//    min-height: 450px;
+//    margin: 0 auto;
+//    background: $secondary-color;
+//    background-image: url(../../images/fa-bg-pattern.png);
+//}
+//
+//.fa-icon{
+//    width: 50%;
+//    height: 40px;
+//    display: inline-block;
+//    position: absolute;
+////    float: left;
+//    top:-0.1em;
+//    background-image: url(../../images/fa-like-icon.png);
+//    background-repeat: no-repeat;
 //    background-origin: border-box;
-    background-size: 26px;
-    background-position: 15px 50%;
-    :hover{
-        background-image: url(../../images/fa-edit-icon-hover.png);
-    }
-}
-
-.fa-like-btn-area{
-    @include grid-column(1);
-}
-
-.fa-post-btn-area{
-    @include grid-column(1);
-}
-
-.fa-share-btn-area{
-    @include grid-column(5);
-}
-
-.fa-share-btn{
-    @include button(true,$primary-color,darken($primary-color,5),#fff, solid);
-    @extend .fa-btn-icon;
-    background-image: url(../../images/fa-friends-icon.png);
-    background-repeat: no-repeat;
-//    background-origin: border-box;
-    background-size: 26px;
-    background-position: 15px 50%;
-}
-
-//---------------------------------------------------Credits Area
-
-.fa-credit-bar{
-    @include grid-column-row();
-    @include menu-simple;
-    color: #eee;
-    background-color:#fff;
-    border-top:1px solid darken($primary-color,2);
-    ul{
-        list-style-type:none;
-        margin: 0;
-        padding-bottom: 8px;
-        padding-top: 8px;
-        li{
-            display: inline-block;
-            a{
-                color: darken($primary-color,5);
-                font-size: 0.9em;
-            }
-        }
-    }
-}
+//}
+//
+//.fa-btn-icon{
+//    position: relative;
+//}
+//
+////---------------------------------------------------Header Area
+//
+//.fa-header{
+//    @include grid-row();
+//    background-color: #fff;
+//    min-height: 50px;
+//    padding-top: 10px;
+//    padding-bottom:10px;
+//}
+//
+//.fa-logo-area{
+//    @include grid-column(6);
+//    padding-top: 5px;
+//}
+//
+//.fa-logo{
+//    height: 60px;
+//}
+//
+//.fa-login-area{
+//    @include grid-column(6);
+//    padding-top: 15px;
+//}
+//
+//.login-btn{
+//    float:right;
+//    height:100%;
+//    padding-left: 40px;
+//    padding-right: 40px;
+//}
+//
+//.fa-login-btn{
+//    @include button(false,$primary-color,darken($primary-color,5),#fff, solid);
+//    @extend .login-btn;
+//}
+//
+//.fa-logout-btn{
+//    @include button(false,$primary-color,darken($primary-color,5),#fff, hollow);
+//    @extend .login-btn;
+//}
+//
+//.fa-profile-pic{
+//    height: 40px;
+//    float: right;
+//    border-radius:50%;
+//    margin-right:20px;
+//}
+//
+//
+////---------------------------------------------------Card Area
+//
+//.fa-card-opt-area{
+//    min-height: 450px;
+//    padding: 100px 100px 20px;
+//}
+//
+//.fa-card{
+//    width: 100%;
+//    border: 15px solid #fff;
+//    background-color: #fff;
+//    border-radius: $global-radius;
+//}
+//
+//.fa-card-nav-area{
+//    @include grid-row();
+//    margin-top:20px;
+//}
+//
+//.fa-card-nav-prev{
+//    @include grid-column(3);
+//}
+//
+//.fa-card-nav-count{
+//    @include grid-column(6);
+//}
+//
+//.fa-card-nav-next{
+//    @include grid-column(3);
+//}
+//
+////---------------------------------------------------Edit Panel
+//
+//
+//label{
+//        color: darken($success-color,12);
+//        text-align: center;
+//        font-weight: bold;
+//}
+//
+//.fa-edit-panel{
+//    @include grid-row();
+//    min-height: 300px;
+//    background-color: lighten(#e3e3e3,3);
+//    padding-bottom: 20px;
+//    padding-top: 30px;
+//}
+//
+//.fa-edit-options{
+//    @include grid-column(8);
+//    @include grid-column-position(center);
+//}
+//
+//.fa-editable-msg{
+//    background-color: lighten(#e3e3e3,7);
+//    padding: 15px;
+//    border: 1px solid darken(#e3e3e3,10);
+//    margin-bottom: 30px;
+//    border-radius: $global-radius;
+//    p{
+//        text-indent: 0;
+//        text-align: center;
+//    }
+//}
+//
+//
+//.fa-floater{
+//
+//    .angucomplete-dropdown{
+//        background-color: lighten(#e3e3e3,5);
+//        font-size: 0.8em;
+//        font-color: $success-color;
+//        padding:15px;
+//        border: 1px solid darken(#e3e3e3, 10);
+//        margin-bottom: 30px;
+//    }
+//    
+//}
+//
+//.fa-draw-btn{
+//    @include button(true, $success-color, darken($success-color, 5), #fff, solid);
+//}
+//
+//.fa-canvass-draw{
+//    @include grid-column(12);
+//    padding: auto 30px;
+//}
+//
+//.fa-drawn-card{
+//    margin-right: 30px;
+//    margin-left: 30px;
+//    margin-top: 30px;
+//}
+//
+////---------------------------------------------------Actions bar
+//
+//.fa-action-bar{
+//    @include grid-row;
+//    background-color: #fff;
+//    padding-top: 15px;
+//    padding-bottom: 15px;
+//}
+//
+//.fa-edit-btn-area{
+//    @include grid-column(5);
+//}
+//
+//.fa-edit-btn{
+//    @include button(true,$primary-color,darken($primary-color,5),#fff, hollow);
+//    @extend .fa-btn-icon;
+//    background-image: url(../../images/fa-edit-icon.png);
+//    background-repeat: no-repeat;
+////    background-origin: border-box;
+//    background-size: 26px;
+//    background-position: 15px 50%;
+//    :hover{
+//        background-image: url(../../images/fa-edit-icon-hover.png);
+//    }
+//}
+//
+//.fa-like-btn-area{
+//    @include grid-column(1);
+//}
+//
+//.fa-post-btn-area{
+//    @include grid-column(1);
+//}
+//
+//.fa-share-btn-area{
+//    @include grid-column(5);
+//}
+//
+//.fa-share-btn{
+//    @include button(true,$primary-color,darken($primary-color,5),#fff, solid);
+//    @extend .fa-btn-icon;
+//    background-image: url(../../images/fa-friends-icon.png);
+//    background-repeat: no-repeat;
+////    background-origin: border-box;
+//    background-size: 26px;
+//    background-position: 15px 50%;
+//}
+//
+////---------------------------------------------------Credits Area
+//
+//.fa-credit-bar{
+//    @include grid-column-row();
+//    @include menu-simple;
+//    color: #eee;
+//    background-color:#fff;
+//    border-top:1px solid darken($primary-color,2);
+//    ul{
+//        list-style-type:none;
+//        margin: 0;
+//        padding-bottom: 8px;
+//        padding-top: 8px;
+//        li{
+//            display: inline-block;
+//            a{
+//                color: darken($primary-color,5);
+//                font-size: 0.9em;
+//            }
+//        }
+//    }
+//}
