--- a/app/develop/scss/_settings.scss
+++ b/app/develop/scss/_settings.scss
@@ -98,16 +98,16 @@
 // $body-antialiased: true;
 
 // Application Colors
-// $primary-color: #00558b;
-// $secondary-color: #f1f1f1;
-// $alert-color: #F04124;
-// $info-color: #A0D3E8;
-// $success-color: #43AC6A;
-// $warning-color: #F08A24;
-// $dark-color: #232323;
-// $gray: #dfdfdf;
-// $gray-dark: darken($gray, 8);
-// $gray-light: lighten($gray, 8);
+ $primary-color: #de0a18;
+ $secondary-color: #fb5000;
+ $alert-color: #F04124;
+ $info-color: #A0D3E8;
+ $success-color: #43AC6A;
+ $warning-color: #F08A24;
+ $dark-color: #232323;
+ $gray: #dfdfdf;
+ $gray-dark: darken($gray, 8);
+ $gray-light: lighten($gray, 8);
 
 // We use these to make sure border radius matches unless we want it different.
 // $global-radius: 4px;
