--- a/app/views/main.html
+++ b/app/views/main.html
@@ -36,7 +36,7 @@
         <div class="fa-edit-panel" id="fa-edit-panel" ng-show="toggler">
            <div class="fa-edit-options">
               <label class="">Click on the message below to edit it</label>
-               <div class="fa-editable-msg" id="message"> 
+               <div class="fa-editable-msg" id="message">
                    <p>The dark ones run when they see the sun.</p>
                    <p>But you and I, we only run for fun.</p>
                    <p>My BBF Forever:</p>
@@ -54,7 +54,7 @@
                       minlenght='3'
                       placeholder="Type Friend's Facebook name" />
               </div>
-               
+
                <div>
                    <button class="fa-draw-btn" ng-click="draw()">Create Card</button>
 
@@ -95,15 +95,8 @@
                 <li><a>Privacy Policy</a></li>
                 <li><a>About Minimie</a></li>
             </ul>
+            <img src="images/fa-bg-pattern.png" width="1" height="1" id="imgbg"/>
         </div>
-
-
-
-
-
-
-
-
 
 
 <!--
